--- a/index.html
+++ b/index.html
@@ -1,39 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>КНИГА</title>
+<h1>ПРИВЕТ ЭТО ТЕКС ДЛЯ ЧОНИБЕКА</h1>
+<p>Чонибеки молоко барои точикистон 900тон шир мебурорад вай аз хама молокои зур мебурорад 1 ч ба 30 тон мебурорад вай довления пойдо шавад кунаш сразу медарад ва 10000 тон шири молоко мебурорад ва абдуи кали кер ако якто шир тиид мегуд чонибек ба маляш бачи бовош гуфт ва таги чонибек ба даромада думбачая бу када кали кераш  амехе холи ки 2 тон шира даруни калли кер ба тиқонда хона ба рафта бувачон ҳа калбово ман шир овардам бува бе пул аз кучо?? аз соскаи ,чонибек кани шир?? сари каллам ба. </p>
+<h1>КОНЕЦ</h1>
 
-  <style>
-    body {
-      background-color: #000;
-      text-align: center;
-      font-family: Arial;
-    }
+<button id="mode" onclick="
+  let b = document.body;
+  let btn = document.getElementById('mode');
 
-    h1 {
-      color: orange;
-    }
-
-    p {
-      color: orange;
-      font-size: 20px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 18px;
-      margin-top: 20px;
-    }
-  </style>
-
-</head>
-<body>
-  <h1>ПОСМОТРИ В НИЗ</h1>
-  <p>Кто двинится тот гей хехехех делал Р.мероч</p>
-
-  <button onclick="alert('Ты двинулся теперь ты гей')">
-    Нажми меня
-  </button>
-</body>
-</html>
+  if (b.style.backgroundColor == 'black') {
+    b.style.backgroundColor = 'white';
+    b.style.color = 'black';
+    btn.innerText = 'НОЧЬ 🌙';
+  } else {
+    b.style.backgroundColor = 'black';
+    b.style.color = 'white';
+    btn.innerText = 'ДЕНЬ ☀️';
+  }
+">
+  НОЧЬ 🌙
+</button>
